release: androidx-8.4.0 support avif format
androidx-8.4.0 support avif format